tests/paczka1/fuzzy1/64649542.err
Error in line 4: l6nR5 A562 73,9
Error in line 3: A123 A562 29,0
Error in line 5: l6nR5 A123 91,4
Error in line 14: SyckGaKJY4N A877 30,6
Error in line 20: TSnS A562 61,7
Error in line 27: FA1YXbq9ov A123 60,1
